fixed media icons visibility

--- a/css/style.css
+++ b/css/style.css
@@ -7161,7 +7161,7 @@ a > img.bear-align-center {
   border-radius: 50%;
 }
 
-#facebook-icon:hover {
+#icon_face123book:hover {
   background-color: #3B5998;
 }
 
@@ -7174,6 +7174,6 @@ a > img.bear-align-center {
   background-color: #dd4b39;
 }
 
-#linkedin-icon:hover {
+#icon_link123:hover {
   background-color: #04669A;
 }
